--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-calendar": "^0.27.9-alpha.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.2.0",
