--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.0",
     "angular-calendar": "^0.27.9-alpha.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
