--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@angular/fire": "^5.1.3",
     "@ng-bootstrap/ng-bootstrap": "^4.2.0",
     "angular-calendar": "^0.27.9-alpha.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.1.0",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.14",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.2.0",
+    "sweetalert2": "^8.11.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -35,17 +40,24 @@
     "@angular/cli": "~6.2.9",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/chai": "^4.1.6",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/lodash": "^4.14.133",
+    "@types/mocha": "^5.2.5",
     "@types/node": "~8.9.4",
+    "@types/sinon": "^7.0.13",
     "codelyzer": "~4.3.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon": "^1.0.5",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^5.2.0",
+    "mocha-typescript": "^1.1.12",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
